add billing
